Added support for lifecycle handlers on components
Changed the way components and decorators are defined in the ComponentRegistry, in order to make it easier to define these lifecycles.