@@ -24,7 +24,6 @@ import org.mockito.*;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -44,6 +43,26 @@ class DefaultComponentRegistryTest {
     void setUp() {
         testSubject = new DefaultComponentRegistry();
         lifecycleRegistry = mock(LifecycleRegistry.class);
+    }
+
+    @Test
+    void newComponentRegisterMethod() {
+        testSubject.registerComponent(ComponentDefinition.ofType(CharSequence.class)
+                                                         .withInstance("Hello world")
+                                                         .onStart(10,
+                                                                  System.out::println));
+
+        testSubject.registerDecorator(DecoratorDefinition.forTypeAndName(CharSequence.class, "myName")
+                                                         .with((config, name, delegate) ->
+                                                                       "" + delegate)
+                                                         .order(10)
+        );
+
+        testSubject.registerDecorator(DecoratorDefinition.forTypeAndName(CharSequence.class, "myName")
+                                                         .with((config, name, delegate) -> "" + delegate)
+                                                         .onShutdown(10, System.out::println)
+                                                         .order(10)
+                                                         .onStart(10, System.out::println));
     }
 
     @Test
@@ -204,7 +223,7 @@ class DefaultComponentRegistryTest {
         assertEquals("parent", actual.getComponent(String.class, "parent"));
         assertThrows(ComponentNotFoundException.class, () -> actual.getComponent(String.class, "child"));
 
-        assertEquals("parent&child", actual.getModuleConfigurations().get(0).getComponent(String.class, "child"));
+        assertEquals("parent&child", actual.getModuleConfigurations().getFirst().getComponent(String.class, "child"));
     }
 
     @Test
@@ -253,6 +272,7 @@ class DefaultComponentRegistryTest {
             verifyNoMoreInteractions(testDescriptor);
         }
 
+        @SafeVarargs
         private <T> Collection<T> eqList(T... expected) {
             return eqList(List.of(expected));
         }
@@ -323,7 +343,7 @@ class DefaultComponentRegistryTest {
     private static class RegisteringConfigurationEnhancer implements ConfigurationEnhancer {
 
         private final List<ConfigurationEnhancer> invokedEnhancers;
-        private int order;
+        private final int order;
 
         public RegisteringConfigurationEnhancer(List<ConfigurationEnhancer> invokedEnhancers, int order) {
             this.invokedEnhancers = invokedEnhancers;
